Add handler get v1 users
